name:                bug
version:             0.0.0.2
license:             AllRightsReserved
author:              Greg Horn
maintainer:          gregmainland@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bug
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
